# depth-based-foveated-rendering

./: readme.md
gl_shading_rate_image/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Log.txt  MainApplication.h  MainApplication_detail.cpp  MainApplication_frame.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  common.h  companion.vert.glsl  depth-based_foveated_rendering.sln  gl_shading_rate_image.vcxproj  gl_shading_rate_image.vcxproj.filters  httpVisiting.cpp  httpVisiting.h  main.cpp  scene.frag.glsl  scene.vert.glsl  torus.frag.glsl  torus.vert.glsl
gl_shading_rate_image/assets/model/: san-miguel.json  sponza.json
gl_shading_rate_image/assets/model/SanMiguel/: Tree1_leaves.mtl  Tree2_leaves.mtl  candle_final.mtl  chair.mtl  chair3_low.mtl  flowers.mtl  glass_low.mtl  ground_leaves.mtl  lamp1.mtl  light_block.mtl  plate_low.mtl  pots.mtl  set.mtl  table.mtl  table2_final.mtl  table2_tablecloth_final.mtl  tree_trunk_1.mtl  vine_with_leaves.mtl
gl_shading_rate_image/glpp/: Shader.h  mesh.h  model.cpp  model.h
gl_shading_rate_image/shared_sources/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  shared_sources.vcxproj  shared_sources.vcxproj.filters
shared_external/AntTweakBar/lib/: AntTweakBar64.exp
shared_sources/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeLists_include.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.h  main_glfw.cpp  main_win32.cpp  shared_sources.sln  shared_sources.vcxproj  shared_sources.vcxproj.filters  wininternal_win32_gl.cpp
shared_sources/cmake/: FindOpenVRSDK.cmake  FindVulkanSDK.cmake
shared_sources/glew/src/: glew.c
shared_sources/nv_helpers/: AssetLoader.cpp  AssetLoader.h  WindowInertiaCamera.h  cameracontrol.hpp  nv_dds.cpp  nv_dds.h  profiler.cpp
shared_sources/nv_helpers_gl/: glresources.hpp  nv_dds_gl.cpp  nv_dds_gl.h  programmanager.cpp  programmanager.hpp
shared_sources/nv_math/: nv_math.h  nv_math.inl  nv_math_glsltypes.h
shared_sources/openvr/: openvr.h
